<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoHalal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="userName">Username</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyBZPsrDp_tECyvlXg0jTcQsyetkfFrNNmU</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="current_location">Current Location</string>
    <string name="target_location">Finding Restaurant</string>
    <string name="restoName">Restaurant Name: </string>
    <string name="alamat">Address: </string>
    <string name="telp">Phone: </string>
    <string name="deskripsi">Deskripsi: </string>
    <string name="restoEmail">Email: </string>
    <string name="addReview">Add Review </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>