<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_view_resto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ac.unj.gohalal.RestaurantActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/pict"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|bottom"
                            android:background="@android:drawable/screen_background_dark_transparent"
                            android:orientation="vertical">

                                <TextView
                                    android:id="@+id/restoName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="16dp"
                                    android:textSize="@dimen/text_size"
                                    android:textColor="#FFFFFF"
                                    android:textStyle="bold" />
                        </LinearLayout>
                </FrameLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/restoAlamat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/alamat"
                                   android:layout_alignParentLeft="true"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_margin="5dp"
                                    android:id="@+id/isiAlamat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:layout_toRightOf="@id/restoAlamat"/>

                                <TextView
                                    android:id="@+id/restoTelp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/telp"
                                    android:layout_below="@id/restoAlamat"
                                    android:layout_alignParentLeft="true"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_margin="5dp"
                                    android:id="@+id/isiTelp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:layout_below="@id/restoAlamat"
                                    android:layout_toRightOf="@id/restoTelp" />

                                <TextView
                                    android:id="@+id/restoEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/restoEmail"
                                    android:layout_below="@id/restoTelp"
                                    android:layout_alignParentLeft="true"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_margin="5dp"
                                    android:id="@+id/isiEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:layout_below="@id/restoTelp"
                                    android:layout_toRightOf="@id/restoEmail"/>

                                <TextView
                                    android:id="@+id/restoDeskripsi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/deskripsi"
                                    android:layout_below="@id/restoEmail"
                                    android:layout_alignParentLeft="true"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_margin="5dp"
                                    android:id="@+id/isiDeskripsi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:layout_below="@id/restoEmail"
                                    android:layout_toRightOf="@id/restoDeskripsi"/>
                        </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                </android.support.v7.widget.RecyclerView>
        </LinearLayout>
</ScrollView>
